--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShortenerLink</title>
-    <link rel="stylesheet" href="https://edycindy.github.io/Shortener/css/style.css">
+    <link rel="stylesheet" href="https://supergames19.github.io/Shortener/css/style.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <div id="server-response"></div>
     </div>
 
-    <script src="https://edycindy.github.io/Shortener/js/script.js"></script>
+    <script src="https://supergames19.github.io/Shortener/js/script.js"></script>
 </body>
 
 </html>
